Google Maps setup to focus on office.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>INTEGRATE PAYPAL PAYMENT GATEWAY IN NODEJS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="import" href="map.ejs">
 </head>
 <body>
 <div class="panel panel-primary" style="width:50%;margin:0 auto; margin-top:10%">
