--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Jumbotron Template for Bootstrap</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
 
