--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,14 @@
         offset: {top: 50}
     });</script>
 <body>
-
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -102,6 +109,11 @@
     </div>
 
     <hr>
+  <div class ="footer-header">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+             <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="270px"></div>
+            </div>
 
     <footer>
         <p>&copy; 2015 Company, Inc.</p>
