--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,22 +10,64 @@
     <meta name="author" content="">
 
     <title>Jumbotron Template for Bootstrap</title>
+    <link rel="stylesheet" href="/public/stylesheets/general.css">
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
-
+<script>$('.navbar-lower').affix({
+        offset: {top: 50}
+    });</script>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div><!-- /.container-fluid -->
+</nav>
+<div class="divide-nav">
+    <div class="container">
+        <p class="divide-text">Some Text Here</p>
+    </div>
+</div>
+<nav class="navbar navbar-default navbar-lower" role="navigation">
+    <div class="container">
+        <div class="collapse navbar-collapse collapse-buttons">
+            <form class="navbar-form navbar-left" role="search">
+                <button class="btn btn-success">Button</button>
+                <button class="btn btn-default">Button</button>
+                <button class="btn btn-default">Button</button>
+                <button class="btn btn-default">Button</button>
+            </form>
         </div>
     </div>
 </nav>
