--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,46 +18,15 @@
         offset: {top: 50}
     });</script>
 <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Brand</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="upper-nav">
+            <p><b>Office</b> 703-964-3210</p>
+            <p id="emergency"><b>24 Hr. Emergency Flood</b> 877-687-5730</p>
+            <img class="social" src="http://placehold.it/20x20">
+            <img class="social" src="http://placehold.it/20x20">
+            <img class="social" src="http://placehold.it/20x20">
         </div>
     </div><!-- /.container-fluid -->
 </nav>
@@ -65,16 +34,25 @@
     <div class="container">
         <p class="divide-text">Some Text Here</p>
     </div>
-</div>
 <nav class="navbar navbar-default navbar-lower" role="navigation">
     <div class="container">
-        <div class="collapse navbar-collapse collapse-buttons">
-            <form class="navbar-form navbar-left" role="search">
-                <button class="btn btn-success">Button</button>
-                <button class="btn btn-default">Button</button>
-                <button class="btn btn-default">Button</button>
-                <button class="btn btn-default">Button</button>
-            </form>
+
+        <div class="lower-nav navbar-header">
+            <a class="navbar-brand" href="#">
+                <img src="/public/images/metro_logo.png">
+                <p>Metropolitan Carpet Specialists</p>
+            </a>
+        </div>
+        <div class="pages">
+            <a href="#">
+                <p>Residential</p>
+            </a>
+            <a href="#">
+                <p>Commercial</p>
+            </a>
+            <a href="#">
+                <p>Pay Now</p>
+            </a>
         </div>
     </div>
 </nav>
@@ -109,15 +87,11 @@
     </div>
 
     <hr>
-  <div class ="footer-header">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-             <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="270px"></div>
-            </div>
 
     <footer>
         <p>&copy; 2015 Company, Inc.</p>
     </footer>
 </div> <!-- /container -->
+</div>
 </body>
 </html>
