--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,15 +11,14 @@
 
     <title>Jumbotron Template for Bootstrap</title>
     <link rel="stylesheet" href="/public/stylesheets/general.css">
+    <link rel="stylesheet" href="/public/stylesheets/navbar.css">
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
-<script>$('.navbar-lower').affix({
-        offset: {top: 50}
-    });</script>
+
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav id="top" class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="upper-nav">
             <p><b>Office</b> 703-964-3210</p>
@@ -31,67 +30,69 @@
     </div><!-- /.container-fluid -->
 </nav>
 <div class="divide-nav">
+        <div id="special" class="container">
+            <p class="divide-text">Some Text Here</p>
+        </div>
+
+    <nav class="navbar navbar-default navbar-lower" role="navigation">
+        <div class="container">
+
+            <div class="lower-nav">
+                <a class = "logo" href="#">
+                    <img src="/public/images/metro_logo.jpg">
+                </a>
+                <div class="pages">
+                    <a href="#">
+                        <p>Residential</p>
+                    </a>
+                    <a href="#">
+                        <p>Commercial</p>
+                    </a>
+                    <a href="#">
+                        <p>Pay Now</p>
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Hello, world!</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        </div>
+    </div>
+
     <div class="container">
-        <p class="divide-text">Some Text Here</p>
-    </div>
-<nav class="navbar navbar-default navbar-lower" role="navigation">
-    <div class="container">
-
-        <div class="lower-nav navbar-header">
-            <a class="navbar-brand" href="#">
-                <img src="/public/images/metro_logo.png">
-                <p>Metropolitan Carpet Specialists</p>
-            </a>
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
         </div>
-        <div class="pages">
-            <a href="#">
-                <p>Residential</p>
-            </a>
-            <a href="#">
-                <p>Commercial</p>
-            </a>
-            <a href="#">
-                <p>Pay Now</p>
-            </a>
-        </div>
-    </div>
-</nav>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-    <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-    </div>
-</div>
+        <hr>
 
-<div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-    </div>
-
-    <hr>
-
-    <footer>
-        <p>&copy; 2015 Company, Inc.</p>
-    </footer>
-</div> <!-- /container -->
+        <footer>
+            <p>&copy; 2015 Company, Inc.</p>
+        </footer>
+    </div> <!-- /container -->
 </div>
 </body>
 </html>
