Added facebook integration

--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -16,6 +16,16 @@ body{
     float: left;
 }
 
+.footer-header{
+    background: #0D4F8B;
+    width: 100%;
+    color: white;
+    border-bottom-width : 50px;
+}
 
+.footer-header p {
+    width: 50%;
+    float: left;
+}
 
 
