--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,10 +38,8 @@
     </div><!-- /.container-fluid -->
 </nav>
 <div class="divide-nav">
-        <div id="special" class="container">
-            <p class="divide-text">Some Text Here</p>
-        </div>
-
+    <div id="special" class="container">
+    </div>
     <nav class="navbar navbar-default navbar-lower" role="navigation">
         <div class="container">
 
@@ -60,18 +58,17 @@
                         <p>Pay Now</p>
                     </a>
                 </div>
-
             </div>
-
         </div>
     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <div class="container">
+        <div class="main-image">
+            <img src="http://loremflickr.com/1140/400" alt="" class="img-responsive">
+            <h2 id="main-image-text"><span id="image-text1">Renew Your Look </span>
+                <br><span id="image-text2">With Metropolitan Carpet Specialists</span></h2>
+            <a href="#">
+            <button type="button" class="btn btn-primary btn-lg raised">Contact Us</button></a>
         </div>
     </div>
 
