--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,11 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="\public\javascript\jquery.min.js"></script>
+    <script src="\public\javascript\bootstrap.min.js"></script>
+    
+
 </head>
 
 <body>
@@ -38,8 +43,10 @@
     </div><!-- /.container-fluid -->
 </nav>
 <div class="divide-nav">
-    <div id="special" class="container">
-    </div>
+        <div id="special" class="container">
+            <p class="divide-text">Some Text Here</p>
+        </div>
+
     <nav class="navbar navbar-default navbar-lower" role="navigation">
         <div class="container">
 
@@ -62,6 +69,8 @@
         </div>
     </nav>
 
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
     <div class="container">
         <div class="main-image">
             <img src="http://loremflickr.com/1140/400" alt="" class="img-responsive">
@@ -91,6 +100,63 @@
                 <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div>
         </div>
+
+        <!-- Slideshow Start -->
+
+ <div id="myCarousel" class="carousel slide">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        
+        <div class="carousel-inner">
+        <div class="item active">
+            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-livingroom-arrow.png" class="img-responsive">
+            <div class="carousel-caption">
+                     <div class="col-md-4 col-md-offset-6">
+                         <h2>Cleaning Services</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            </div>
+            </div>
+            </div>
+            <div class="item">
+            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-carpet-arrow.png" class="img-responsive">
+                 <div class="carousel-caption">
+                      <div class="col-md-4 col-md-offset-6">
+                         <h2>Restoration Services</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            </div>
+            </div>
+            </div>
+            <div class="item">
+            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-flood-arrow.png" class="img-responsive">
+                 <div class="carousel-caption">
+                      <div class="col-md-4 col-md-offset-6">
+                         <h2>24-Hour Flood Services</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            </div>
+            </div>
+            </div>
+            <div class="item">
+            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-powerwash-arrow.png" class="img-responsive">
+                 <div class="carousel-caption">
+                     <div class="col-md-4 col-md-offset-6">
+                         <h2>Power Washing</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            </div>
+            </div>
+            </div>
+        </div>
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+        <span class="icon-prev"></span>
+        </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+        <span class="icon-next"></span>
+        </a>
+    </div>
+
           <div class ="footer-header">
             <h2>Heading</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
