--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <title>Jumbotron Template for Bootstrap</title>
     <link rel="stylesheet" href="/public/stylesheets/general.css">
     <link rel="stylesheet" href="/public/stylesheets/navbar.css">
-    <link rel="stylesheet" href="/public/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -23,8 +23,8 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="\public\javascript\jquery.min.js"></script>
-    <script src="\public\javascript\bootstrap.min.js"></script>
+    <script src="/public/javascript/jquery.min.js"></script>
+    <script src="/public/javascript/bootstrap.min.js"></script>
     
 
 </head>
@@ -73,14 +73,14 @@
     <div class="jumbotron">
     <div class="container">
         <div class="main-image">
-            <img src="http://loremflickr.com/1140/400" alt="" class="img-responsive">
+            <img src="/public/images/photo-livingroom.png"  alt="" class="img-responsive">
             <h2 id="main-image-text"><span id="image-text1">Renew Your Look </span>
                 <br><span id="image-text2">With Metropolitan Carpet Specialists</span></h2>
             <a href="#">
             <button type="button" class="btn btn-primary btn-lg raised">Contact Us</button></a>
         </div>
     </div>
-
+    </div>
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
@@ -113,7 +113,7 @@
         
         <div class="carousel-inner">
         <div class="item active">
-            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-livingroom-arrow.png" class="img-responsive">
+            <img src="/public/images/photo-livingroom-arrow.png" class="img-responsive">
             <div class="carousel-caption">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Cleaning Services</h2>
@@ -122,7 +122,7 @@
             </div>
             </div>
             <div class="item">
-            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-carpet-arrow.png" class="img-responsive">
+            <img src="/public/images/photo-carpet-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>Restoration Services</h2>
@@ -131,7 +131,7 @@
             </div>
             </div>
             <div class="item">
-            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-flood-arrow.png" class="img-responsive">
+            <img src="/public/images/photo-flood-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>24-Hour Flood Services</h2>
@@ -140,7 +140,7 @@
             </div>
             </div>
             <div class="item">
-            <img src="D:\Users\Jenny\Documents\GitHub\Metro-Carpet\public\images\photo-powerwash-arrow.png" class="img-responsive">
+            <img src="/public/images/photo-powerwash-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Power Washing</h2>
