--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -1,13 +1,18 @@
 .footer-header{
     background: #0D4F8B;
-    width: 100%;
     color: white;
-    border-bottom-width : 50px;
+    padding-left: 2%;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
-.footer-header p {
-    width: 50%;
-    float: left;
+.footer-header h4 {
+    font-weight: bold;
+}
+
+
+.yelp-background {
+    background: white;
 }
 
 .btn-primary.raised {
@@ -50,6 +55,7 @@
     margin-top: 5%;
     font-size: 2vmin;
 }
+
 
 li {
    list-style:none;
