--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <div id="fb-root"></div>
+    <!-- Stuff for yelp -->
+    <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("christos-steak-house-astoria","270","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
+    <!-- Stuff for Fbook -->
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
@@ -23,6 +26,7 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/public/javascript/jquery.min.js"></script>
     <script src="/public/javascript/bootstrap.min.js"></script>
@@ -144,9 +148,9 @@
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Cleaning Services</h2>
                             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
             </div>
-            </div>
-            </div>
+        </div>
             <div class="item">
             <img src="/public/images/photo-carpet-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
@@ -161,7 +165,10 @@
                  <div class="carousel-caption">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>24-Hour Flood Services</h2>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p>And you will go to Mykonos
+                            With a vision of a gentle coast
+                            And a sun to maybe dissipate
+                            Shadows of the mess you made</p>
             </div>
             </div>
             </div>
@@ -170,7 +177,11 @@
                  <div class="carousel-caption">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Power Washing</h2>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p>Right about now, N.W.A. court is in full effect
+                            Judge Dre presiding
+                            In the case of N.W.A. vs. the Police Department;
+                            prosecuting attorney's are: MC Ren, Ice Cube,
+                            and Eazy-motherfucking-E</p>
             </div>
             </div>
             </div>
@@ -183,17 +194,32 @@
         </a>
     </div>
 
-          <div class ="footer-header">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-             <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="270px"></div>
-            </div>
-        <hr>
+    <div class ="footer-header">
+    <div class ="row">
+           <div class="col-md-4">
+            <h4>Metropolitan Carpet Specialists</h4>
+            <p>21441 Pacific Blvd.<br>
+            Sterling, VA 20166</p>
 
-        <footer>
-            <p>&copy; 2015 Company, Inc.</p>
+            <p><b>Phone:</b> 703-964-3210<br>
+            <b>Fax:</b> 703-964-3215<br>
+            <b>Emergency:</b> 877-687-5730</p>
+
+            <p><b>Email:</b> tdonley@dcmetrocarpet.com</p>
+            <b>Business Hours: </b><br>
+            8:00 a.m. to 5:00 p.m., Monday through Friday<br>
+            24-hour emergency service available</p></div>
+       <div class="col-md-4">  <div width="250px" id="yelpwidget"></div> </div>
+          <div class="col-md-4">    <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="250px"></div> </div>
+    </div>
+    </div>
+        <hr>
+        <footer> 
+            <p>&copy; 2016 Metropolitan Carpet Specialists. All Rights Reserved.</p>
         </footer>
     </div> <!-- /container -->
 </div>
+
 </body>
+
 </html>
