--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,49 +31,45 @@
 
 <body>
 
-<nav id="top" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="upper-nav">
-            <p><b>Office</b> 703-964-3210</p>
-            <p id="emergency"><b>24 Hr. Emergency Flood</b> 877-687-5730</p>
-            <img class="social" src="http://placehold.it/20x20">
-            <img class="social" src="http://placehold.it/20x20">
-            <img class="social" src="http://placehold.it/20x20">
-        </div>
-    </div><!-- /.container-fluid -->
-</nav>
-<div class="divide-nav">
-        <div id="special" class="container">
-            <p class="divide-text">Some Text Here</p>
-        </div>
-
-    <nav class="navbar navbar-default navbar-lower" role="navigation">
+<div id="wrap">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-
-            <div class="lower-nav">
-                <a class = "logo" href="#">
-                    <img src="/public/images/metro_logo.jpg">
-                </a>
-                <div class="pages">
-                    <a href="#">
-                        <p>Residential</p>
+            <div class="navbar-header">
+                <div class="lower-nav">
+                    <a class = "logo" href="#">
+                        <img src="/public/images/metro_logo.jpg">
                     </a>
-                    <a href="#">
-                        <p>Commercial</p>
-                    </a>
-                    <a href="#">
-                        <p>Pay Now</p>
-                    </a>
+                    <div class="pages">
+                        <a href="#">
+                            <p>Residential</p>
+                        </a>
+                        <a href="#">
+                            <p>Commercial</p>
+                        </a>
+                        <a href="#">
+                            <p>Pay Now</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </nav>
-
+    </div>
+    <div class="navbar navbar-default navbar-fixed-top second-navbar">
+        <div class="container">
+            <div class="navbar-header upper-nav">
+                <p><b>Office</b> 703-964-3210</p>
+                <p id="emergency"><b>24 Hr. Emergency Flood</b> 877-687-5730</p>
+                <img class="social" src="http://placehold.it/20x20">
+                <img class="social" src="http://placehold.it/20x20">
+                <img class="social" src="http://placehold.it/20x20">
+            </div>
+        </div>
+    </div>
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
-    <div class="container">
+    <div id="top-body" class="container">
         <div class="main-image">
-            <img src="/public/images/photo-livingroom.png"  alt="" class="img-responsive">
+            <img src="/public/images/photo-carpet.png"  alt="" class="img-responsive">
             <h2 id="main-image-text"><span id="image-text1">Renew Your Look </span>
                 <br><span id="image-text2">With Metropolitan Carpet Specialists</span></h2>
             <a href="#">
@@ -110,7 +106,7 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
-        
+
         <div class="carousel-inner">
         <div class="item active">
             <img src="/public/images/photo-livingroom-arrow.png" class="img-responsive">
