--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Metropolitan Carpet Specialists</title>
     <link rel="stylesheet" href="/public/stylesheets/general.css">
     <link rel="stylesheet" href="/public/stylesheets/navbar.css">
+    <link rel="stylesheet" href="/public/stylesheets/top-image.css">
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <div id="fb-root"></div>
@@ -25,12 +26,9 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/public/javascript/jquery.min.js"></script>
     <script src="/public/javascript/bootstrap.min.js"></script>
-    
-
 </head>
 
 <body>
-
 <div id="wrap">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -66,7 +64,25 @@
         </div>
     </div>
     <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div id="top-body" class="container">
+        <div id="static-carousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="http://placehold.it/1900x800" alt="" class="img-responsive">
+                    <div class="carousel-caption">
+                        <h3>Renew Your Look</h3>
+                        <p>With Metropolitian Carpet Specialists</p>
+                        <div class="learn-button">
+                            <a class="btn btn-primary raised slide-btn" href="#">Contact Us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+    <!--
     <div id="top-body" class="container">
         <div class="main-image">
             <img src="/public/images/photo-carpet.png"  alt="" class="img-responsive">
@@ -76,7 +92,7 @@
             <button type="button" class="btn btn-primary btn-lg raised">Contact Us</button></a>
         </div>
     </div>
-
+-->
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
