--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,25 +94,39 @@
     </div>
 -->
     <div class="container">
-        <!-- Example row of columns -->
+
+        <!-- Services Start -->
+
+<div class="white">
+   <h1>Our Services</h1>
         <div class="row">
-            <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <div class="col-md-3">
+           <li data-target="#myCarousel" data-slide-to="0" class="active"> 
+           <img src="/public/images/icon-cleaning.png">
+                <p>Cleaning</p>
+                </li>
             </div>
-            <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <div class="col-md-3">
+            <li data-target="#myCarousel" data-slide-to="1">
+            <img src="/public/images/icon-restoration.png">
+                <p>Restoration</p>
+                </li>
             </div>
-            <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <div class="col-md-3">
+            <li data-target="#myCarousel" data-slide-to="2">
+            <img src="/public/images/icon-flood.png">
+                <p>24 Hour Flood Service</p>
+                </li>
+            </div>
+            <div class="col-md-3">
+            <li data-target="#myCarousel" data-slide-to="3">
+            <img src="/public/images/icon-pw.png">
+                <p>Power Washing</p>
+                </li>
             </div>
         </div>
-
+        </div>
+     
         <!-- Slideshow Start -->
 
  <div id="myCarousel" class="carousel slide">
