--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -3119,9 +3119,14 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 .btn-primary {
+  font-weight: bold;
+  border-radius: 24px;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+   background: #036ee2; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#036ee2, #003b7b); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#036ee2, #003b7b); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#036ee2, #003b7b); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#036ee2, #003b7b); /* Standard syntax */
 }
 .btn-primary:focus,
 .btn-primary.focus {
