--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
                         <h3>Renew Your Look</h3>
                         <p>With Metropolitian Carpet Specialists</p>
                         <div class="learn-button">
-                            <a class="btn btn-primary raised slide-btn" href="#">Contact Us</a>
+                            <a class=" btn-primary slide-btn" href="#">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -248,6 +248,14 @@
                 <div class="col-md-2">
                     <a href="#">
                         <li>
+                            <img class="img-responsive" src="/public/images/metro_logo.png">
+                            <p>Metropolitan Carpet Specialists</p>
+                        </li>
+                    </a>
+                </div>
+                <div class="col-md-2">
+                    <a href="#">
+                        <li>
                             <img class="img-responsive" src="/public/images/logos/sarantis-properties.gif">
                             <p>Sarantis Properties</p>
                         </li>
@@ -276,7 +284,9 @@
     </div>
         <hr>
         <footer> 
+        <div class="container text-center">
             <p>&copy; 2016 Metropolitan Carpet Specialists. All Rights Reserved.</p> 
+            </div>
         </footer>  
     </div> <!-- /container -->
 </div>
