tweaked logo and some other things.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -212,6 +212,7 @@
         <div class="white">
             <h1>Christos Companies</h1>
             <div class="companies row">
+                <div class="col-md-1"></div>
                 <div class="col-md-2">
                     <a href="#">
                         <li>
@@ -247,19 +248,12 @@
                 <div class="col-md-2">
                     <a href="#">
                         <li>
-                            <img class="img-responsive" src="/public/images/metro_logo.png">
-                            <p>Metropolitan Carpet Specialists</p>
-                        </li>
-                    </a>
-                </div>
-                <div class="col-md-2">
-                    <a href="#">
-                        <li>
-                            <img class="img-responsive" src="/public/images/logos/CC%20SK%20Real%20Icon.jpg">
+                            <img class="img-responsive" src="/public/images/logos/sarantis-properties.gif">
                             <p>Sarantis Properties</p>
                         </li>
                     </a>
                 </div>
+                <div class = "col-md-1"></div>
             </div>
         </div>
     <div class ="footer-header">
