--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -4,6 +4,7 @@
     padding-left: 2%;
     padding-top: 3%;
     padding-bottom: 3%;
+    margin-top: 50px;
 }
 
 .footer-header h4 {
@@ -77,15 +78,13 @@ li {
 }
 
 .companies img {
-    width: 170px;
     height: 140px;
     margin: auto;
 }
 .companies li {
-    height: 250px;
-    width: 180px;
     margin: auto;
 }
-.companies li:hover {
-    background: #ACBFD0
+
+footer p {
+    text-align: center;
 }
