--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,13 @@
     <meta name="author" content="">
 
     <title>Metropolitan Carpet Specialists</title>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/stylesheets/general.css">
     <link rel="stylesheet" href="/public/stylesheets/navbar.css">
     <link rel="stylesheet" href="/public/stylesheets/top-image.css">
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <div id="fb-root"></div>
-    <!-- Stuff for yelp -->
-    <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("christos-steak-house-astoria","270","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
-    <!-- Stuff for Fbook -->
     <!-- Stuff for yelp -->
     <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("christos-steak-house-astoria","270","RED","y","y","1");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
     <!-- Stuff for Fbook -->
@@ -70,13 +68,12 @@
                 <img class="social" src="/public/images/icon-facebook.png">
             </div>
         </div>
-    </div>
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="top-body" class="">
+    </div>  <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div id="top-body" class="fluid-container">
         <div id="static-carousel" class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="/public/images/photo-carpet.png" alt="" class="img-responsive">
+                    <img src="/public/images/carpet.jpg" alt="" class="img-responsive">
                     <div class="carousel-caption">
                         <h3>Renew Your Look</h3>
                         <p>With Metropolitian Carpet Specialists</p>
@@ -101,7 +98,7 @@
         </div>
     </div>
 -->
-    <div class="">
+    <div class="container">
 
         <!-- Services Start -->
 
@@ -134,9 +131,9 @@
             </div>
         </div>
         </div>
-     
+     </div>
         <!-- Slideshow Start -->
-
+<div class="fluid-container">
  <div id="myCarousel" class="carousel slide">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -169,10 +166,7 @@
                  <div class="carousel-caption">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>24-Hour Flood Services</h2>
-                            <p>And you will go to Mykonos
-                                With a vision of a gentle coast
-                            And a sun to maybe dissipate
-                            Shadows of the mess you made</p>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             </div>
             </div>
             </div>
@@ -181,14 +175,10 @@
                  <div class="carousel-caption">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Power Washing</h2>
-                            <p>Right about now, N.W.A. court is in full effect
-                            Judge Dre presiding
-                            In the case of N.W.A. vs. the Police Department;
-                            prosecuting attorney's are: MC Ren, Ice Cube,
-                            and Eazy-motherfucking-E</p>
+                           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             </div>
             </div>
-            </div>
+        </div>
         </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
         <span class="icon-prev"></span>
@@ -196,7 +186,8 @@
         <a class="carousel-control right" href="#myCarousel" data-slide="next">
         <span class="icon-next"></span>
         </a>
-    </div>
+    </div></div>
+    <div class="container">
         <div id="why-us">
             <h1>Why Metropolitan Carpet Specialists?</h1>
             <p>Lorem Ipsum is simply dummy text of the
@@ -212,7 +203,6 @@
         <div class="white">
             <h1>Christos Companies</h1>
             <div class="companies row">
-                <div class="col-md-1"></div>
                 <div class="col-md-2">
                     <a href="#">
                         <li>
@@ -256,17 +246,17 @@
                 <div class="col-md-2">
                     <a href="#">
                         <li>
-                            <img class="img-responsive" src="/public/images/logos/sarantis-properties.gif">
+                            <img class="img-responsive" src="/public/images/logos/CC%20SK%20Real%20Icon.jpg">
                             <p>Sarantis Properties</p>
                         </li>
                     </a>
                 </div>
-                <div class = "col-md-1"></div>
             </div>
         </div>
+         </div>
     <div class ="footer-header">
     <div class ="row">
-           <div class="col-md-4">
+           <div class="col-md-4 col-md-offset-1">
             <h4>Metropolitan Carpet Specialists</h4>
             <p>21441 Pacific Blvd.<br>
             Sterling, VA 20166</p>
