--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -6255,9 +6255,9 @@ button.close {
 .carousel-inner > .item {
   position: relative;
   display: none;
-  -webkit-transition: .6s ease-in-out left;
-       -o-transition: .6s ease-in-out left;
-          transition: .6s ease-in-out left;
+  -webkit-transition: .16s ease-in-out left;
+       -o-transition: .16s ease-in-out left;
+          transition: .16s ease-in-out left;
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
@@ -6427,17 +6427,20 @@ button.close {
   background-color: #fff;
 }
 .carousel-caption {
-  position: absolute;
-  bottom: 80px;
+  top: 50%;
+transform: translateY(-50%);
+  bottom: initial;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
   color: #fff;
   text-align: right;
+  position: absolute;
 }
 .carousel-caption h2{
   font-weight: bold;
+  font-size: 3.8vmin;
+}
+.carousel-caption p{
+  font-size: 1.5vmin;
 }
 .carousel-caption .btn {
   text-shadow: none;
