--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -8,7 +8,6 @@
     padding-left: 2%;
     padding-top: 3%;
     padding-bottom: 3%;
-    margin-top: 50px;
 }
 
 .footer-header h4 {
@@ -37,13 +36,8 @@
 }
 
 #myCarousel {
-	margin-top: 5%;
+	margin-top: 3%;
 	margin-bottom: 5%;
-}
-
-#myCarousel {
-    margin-top: 5%;
-    margin-bottom: 5%;
 }
 
 .white {
@@ -52,8 +46,8 @@
 }
 
 .white h1{
-    margin-bottom: 3%;
-    font-size: 4.3vmin;
+    margin-bottom: 4%;
+    font-size: 4vmin;
 }
 
 .white p{
@@ -75,20 +69,30 @@ li {
 }
 #why-us h1 {
     margin-bottom: 3%;
-    font-size: 4.3vmin;
+    font-size: 4vmin;
 }
 #why-us p {
     font-size: 2vmin;
 }
 
 .companies img {
+    width: 170px;
     height: 140px;
     margin: auto;
 }
 .companies li {
+    height: 250px;
+    width: 180px;
     margin: auto;
 }
+.companies li:hover {
+    background: #ACBFD0
+}
 
-footer p {
-    text-align: center;
+
+/*------Headers----------*/
+@media all and (min-width: 1400px) {
+.carousel-caption {
+  margin-left: 100px;
+}
 }
