Center Header fix

--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -92,7 +92,7 @@ li {
 
 /*------Headers----------*/
 @media all and (min-width: 1400px) {
-.carousel-caption {
+.carousel-caption2 {
   margin-left: 100px;
 }
 }
