--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,36 +167,44 @@
         <div class="item active">
             <img src="/public/images/photo-livingroom-arrow.png" class="img-responsive">
             <div class="carousel-caption">
+            <div class="carousel-caption2">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Cleaning Services</h2>
                             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
                     </div>
                     </div>
         </div>
             <div class="item">
             <img src="/public/images/photo-carpet-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
+                 <div class="carousel-caption2">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>Restoration Services</h2>
                             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             </div>
             </div>
             </div>
+            </div>
             <div class="item">
             <img src="/public/images/photo-flood-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
+                 <div class="carousel-caption2">
                       <div class="col-md-4 col-md-offset-6">
                          <h2>24-Hour Flood Services</h2>
                             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             </div>
             </div>
             </div>
+            </div>
             <div class="item">
             <img src="/public/images/photo-powerwash-arrow.png" class="img-responsive">
                  <div class="carousel-caption">
+                 <div class="carousel-caption2">
                      <div class="col-md-4 col-md-offset-6">
                          <h2>Power Washing</h2>
                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            </div>
             </div>
             </div>
         </div>
