tweaked logo, footer, and some text around.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
         <div id="static-carousel" class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="/public/images/carpet.jpg" alt="" class="img-responsive">
+                    <img src="/public/images/photo-carpet.png" alt="" class="img-responsive">
                     <div class="carousel-caption">
                         <h3>Renew Your Look</h3>
                         <p>With Metropolitian Carpet Specialists</p>
@@ -229,9 +229,11 @@
                 electronic typesetting, remaining essentially unchanged.
             </p>
         </div>
+     </div>
         <div class="white">
             <h1>Christos Companies</h1>
             <div class="companies row">
+                <div class="col-md-1"></div>
                 <div class="col-md-2">
                     <a href="#">
                         <li>
@@ -267,24 +269,17 @@
                 <div class="col-md-2">
                     <a href="#">
                         <li>
-                            <img class="img-responsive" src="/public/images/metro_logo.png">
-                            <p>Metropolitan Carpet Specialists</p>
-                        </li>
-                    </a>
-                </div>
-                <div class="col-md-2">
-                    <a href="#">
-                        <li>
-                            <img class="img-responsive" src="/public/images/logos/CC%20SK%20Real%20Icon.jpg">
+                            <img class="img-responsive" src="/public/images/logos/sarantis-properties.gif">
                             <p>Sarantis Properties</p>
                         </li>
                     </a>
                 </div>
+                <div class="col-md-1"></div>
             </div>
         </div>
          </div>
 
-    <div class="slide-out-div">
+    <div class=" container slide-out-div">
         <a class="handle" href="http://link-for-non-js-users.html">Content</a>
         <div class="contact-container">  
           <form id="contact" action="" method="post">
@@ -310,7 +305,7 @@
     </div>
     <div class ="footer-header">
     <div class ="row">
-           <div class="col-md-4 col-md-offset-1">
+           <div class="col-md-4">
             <h4>Metropolitan Carpet Specialists</h4>
             <p>21441 Pacific Blvd.<br>  
             Sterling, VA 20166</p>
@@ -321,7 +316,7 @@
             <p><b>Email:</b> tdonley@dcmetrocarpet.com</p>
             <b>Business Hours: </b><br>
             8:00 a.m. to 5:00 p.m., Monday through Friday<br>
-            24-hour emergency service available</p></div>
+            24-hour emergency service available</div>
        <div class="col-md-4">  <div width="250px" id="yelpwidget"></div> </div>
           <div class="col-md-4">    <div class="fb-page" data-href="https://www.facebook.com/Metropolitan-Carpet-Specialists-Inc-131101043624574/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-height="300px" data-width="250px"></div> </div>
     </div>
